infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talkpp
  labels:
    name: talkpp
    app.kubernetes.io/name: talkpp
    app.kubernetes.io/component: infrastructure
